samples/_failures_safe/1761719860_19c342_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70e590b8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_70e590b8.c:161:22: error: expected ‘;’ at end of input
  161 |                 token
      |                      ^
      |                      ;
./samples/SAFE/__tmp_70e590b8.c:161:17: error: expected declaration or statement at end of input
  161 |                 token
      |                 ^~~~~
./samples/SAFE/__tmp_70e590b8.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70e590b8.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_70e590b8.c:161:17: error: expected declaration or statement at end of input
